--- a/Project5/SymbolTableProject/MainDriver/MainDriver.vcxproj.filters
+++ b/Project5/SymbolTableProject/MainDriver/MainDriver.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="Types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FlexLexer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="tiger.tab.hh">
